# project_freeride

./: .gitignore  CMakeLists.txt  ReadMe.md  ReadMe.txt  Todo.txt
Dusk/: CMakeLists.txt  DuskEngine.cpp  DuskEngine.h  Shared.cpp  Shared.h
Dusk/Core/: BuildFlags.h  CommandLineArgs.h  CpuProfiler.cpp  CpuProfiler.h  DebugHelpers.h  DebugHelpersUnix.cpp  DebugHelpersWin32.cpp  EnvVarsRegister.h  EnvVarsRegister.inl  Environment.h  EnvironmentUnix.cpp  EnvironmentWin32.cpp  FramerateCounter.h  HLSLSemanticLuts.h  Lexer.cpp  Lexer.h  LibraryRuntimeUnix.cpp  Logger.cpp  Parser.cpp  Parser.h  Polygon.h  RenderPassGenerator.cpp  RenderPassGenerator.h  StringHelpers.h  SystemIncludes.h  Timer.cpp  Types.h
Dusk/FileSystem/: FileSystem.h  FileSystemArchive.cpp  FileSystemArchive.h  FileSystemNative.h  FileSystemObject.h  FileSystemObjectArchive.cpp  FileSystemObjectArchive.h  FileSystemObjectNative.cpp  FileSystemObjectNative.h  FileSystemUnix.cpp  FileSystemUnix.h  FileSystemWin32.cpp  FileSystemWin32.h  VirtualFileSystem.cpp  VirtualFileSystem.h
Dusk/Framework/: AreaStreaming.cpp  AreaStreaming.h  ComponentDatabase.cpp  ComponentDatabase.h  Entity.h  EntityNameRegister.cpp  EntityNameRegister.h  EnvironmentProbe.cpp  EnvironmentProbe.h  PointLight.cpp  PointLight.h  StaticGeometry.cpp  StaticGeometry.h  Transform.cpp  Transform.h  Vehicle.cpp  Vehicle.h  World.cpp  World.h
Dusk/Graphics/: DrawCommand.h  DrawCommandBuilder.cpp  DrawCommandBuilder.h  EnvironmentProbeStreaming.cpp  EnvironmentProbeStreaming.h  FrameGraph.cpp  FrameGraph.h  GpuProfiler.cpp  GpuProfiler.h  GraphicsAssetCache.cpp  GraphicsAssetCache.h  HudRenderer.cpp  HudRenderer.h  LightGrid.cpp  LightGrid.h  LightingConstants.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelBuilder.cpp  ModelBuilder.h  PipelineStateCache.cpp  PipelineStateCache.h  PrimitiveCache.cpp  PrimitiveCache.h  RenderWorld.cpp  RenderWorld.h  RuntimeShaderCompiler.cpp  RuntimeShaderCompiler.h  ShaderCache.cpp  ShaderCache.h  WorldRenderer.cpp  WorldRenderer.h
Dusk/Input/: InputContext.h  InputKeys.h  InputMapper.h  InputReader.cpp  InputReader.h  InputReaderWin32.cpp  InputReaderWin32.h  InputReaderXcb.h  MappedInput.h
Dusk/Io/: DirectDrawSurface.cpp  FontDescriptor.cpp  TextStreamHelpers.h
Dusk/Maths/: BoundingSphere.cpp  Frustum.cpp  Helpers.h  Matrix.h  Matrix.inl  MatrixTransformations.cpp  Primitives.cpp  Primitives.h  Quaternion.h  Quaternion.inl  Transform.cpp  Vector.h  Vector.inl
Dusk/Parsing/: GeometryParser.h  ImageParser.h
Dusk/Physics/: BulletDynamicsWorld.cpp  BulletDynamicsWorld.h  DynamicsWorld.h  MotorizedVehicle.cpp  MotorizedVehicle.h  RigidBody.h
Dusk/Rendering/: CommandList.cpp  CommandList.h  RenderDevice.cpp  RenderDevice.h
DuskBaker/: Baker.cpp  Baker.h  BakerCache.cpp  BakerCache.h  CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h  EntryPointUnix.cpp  EntryPointWin64.cpp
DuskCore/: CMakeLists.txt  Shared.h
DuskCore/Core/: BitsManipulation.h  BuildFlags.h  CommandLineArgs.cpp  DebugHelpersWin32.cpp  EnvVarsRegister.cpp  EnvVarsRegister.h  Environment.h  EnvironmentUnix.cpp  FramerateCounter.cpp  LibraryRuntime.h  LibraryRuntimeWin32.cpp  Logger.cpp  Logger.h  Parser.cpp  Parser.h  StringHelpers.h  Timer.cpp  Timer.h  Types.h  ViewFormat.h
DuskCore/FileSystem/: FileSystemNative.cpp  FileSystemObject.h  FileSystemObjectNative.cpp  VirtualFileSystem.cpp  VirtualFileSystem.h
DuskCore/Framework/: AreaStreaming.h  ComponentDatabase.h  Entity.h  EntityDatabase.cpp  EntityDatabase.h  EntityNameRegister.cpp  EntityNameRegister.h  StaticGeometry.cpp  Transform.cpp  Transform.h  World.cpp  World.h
DuskCore/Input/: InputAxis.h  InputContext.cpp  InputLayouts.h  InputMapper.cpp  InputReaderXcb.cpp
DuskCore/Io/: Binary.h  DirectDrawSurface.cpp  DirectDrawSurface.h  FontDescriptor.cpp  FontDescriptor.h  TextStreamHelpers.h
DuskCore/Maths/: AABB.cpp  AABB.h  BoundingSphere.h  Frustum.h  Matrix.h  Matrix.inl  MatrixTransformations.h  Ray.h  Transform.h  Vector.h
DuskCore/Parsing/: DuskGeometry.h  GeometryParser.h
DuskCore/Rendering/: Shared.h
DuskEd/: CMakeLists.txt  DefaultInputConfig.h  Editor.cpp  Editor.h  EntryPointUnix.cpp  EntryPointWin64.cpp
DuskEd/Core/: FileSystemIOHelpers.h  FileSystemIOHelpersUnix.cpp  FileSystemIOHelpersWin32.cpp  ImGuiManager.cpp  ImGuiManager.h
DuskEd/FileSystem/: FileSystemWatchdog.h  FileSystemWatchdogWin32.cpp  FileSystemWatchdogWin32.h
DuskEd/Framework/: EditableMaterial.cpp  EditableMaterial.h  EditorInterface.cpp  EditorInterface.h  EntityEditor.cpp  EntityEditor.h  ImGuiUtilities.h  LoggingConsole.cpp  LoggingConsole.h  MaterialEditor.cpp  MaterialEditor.h  MaterialGenerator.cpp  MaterialGenerator.h  TransactionCommand.h  TransactionHandler.cpp  TransactionHandler.h  TranslateCommand.h
DuskEd/Graphics/: PrimitiveBuilder.cpp  PrimitiveBuilder.h  RenderDocHelper.cpp  RenderDocHelper.h  RuntimeShaderCompiler.cpp  RuntimeShaderCompiler.h
DuskEd/Parsing/: FbxParser.cpp  FbxParser.h  GeometryParser.h  PrimitiveExporter.cpp  PrimitiveExporter.h
DuskGUI/: CMakeLists.txt
DuskGUI/UnityBuild/: Batch0.cpp
DuskGUI/Widgets/: Button.cpp  Button.h  Label.cpp  Label.h  Panel.cpp  Panel.h  Screen.cpp  Screen.h  Widget.cpp  Widget.h
DuskLexer/: CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h  HLSLSemanticLuts.h  Parser.cpp  Parser.h  RenderPassGenerator.cpp  RenderPassGenerator.h
DuskRenderer/: CMakeLists.txt
DuskRenderer/Graphics/: DirectionalLightHelpers.h  DrawCommandBuilder.cpp  DrawCommandBuilder.h  FrameGraph.cpp  FrameGraph.h  GraphicsAssetCache.cpp  GraphicsAssetCache.h  Light.h  LightGrid.cpp  LightGrid.h  Material.cpp  Material.h  Model.cpp  Model.h  PipelineStateCache.cpp  PipelineStateCache.h  Primitive.h  PrimitiveCache.cpp  PrimitiveCache.h  RenderWorld.cpp  RenderWorld.h  ShaderCache.cpp  ShaderCache.h  ShadowMappingShared.h  WorldRenderer.cpp  WorldRenderer.h
DuskRenderer/Rendering/: CommandList.h  RenderDevice.cpp  (+1 more)
DuskTestGraphics/: App.cpp  App.h  CMakeLists.txt  EntryPointUnix.cpp  EntryPointWin64.cpp
(+277 files in other folders)
